# nyancat-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.githooks/: pre-commit
.github/workflows/: ci.yml
src/: art.rs  cli.rs  local.rs  main.rs  render.rs  ssh.rs  telnet.rs
tests/: ssh.rs  telnet.rs
tests/common/: mod.rs
